--- a/provisioning/vars.yml
+++ b/provisioning/vars.yml
@@ -6,7 +6,7 @@
 
 nodejs_app_name: gpii-iod
 
-nodejs_app_tcp_port: 8084
+nodejs_app_tcp_port: 8087
 
 # Currently Node.js 6.x LTS is required by Universal
 nodejs_branch: lts
@@ -17,6 +17,6 @@ nodejs_branch: lts
 # If a specific npm version is needed, specify it here
 #nodejs_npm_version: 2.15.1
 
-nodejs_app_start_script: index.js
+nodejs_app_start_script: iod.js
 
 nodejs_app_git_clone: false
