--- a/configs/gpii-iod.production.json5
+++ b/configs/gpii-iod.production.json5
@@ -1,13 +1,13 @@
 {
-    "type": "iod.config.dev",
+    "type": "gpii.iod.config.dev",
     "options": {
         "gradeNames": ["fluid.component"],
         "distributeOptions": {
-            "iod.packageDataSource.moduleTerms": {
+            "gpii.iod.packageDataSource.moduleTerms": {
                 "record": "kettle.dataSource.file.moduleTerms",
                 "target": "{that packageDataSource}.options.gradeNames"
             },
-            "iod.packageDataSource": {
+            "gpii.iod.packageDataSource": {
                 "record": {
                     "path": "%gpii-iod/testData/packageData/%packageName.json5",
                     "termMap": {
@@ -18,10 +18,17 @@
             },
             "iodServer": {
                 "record": {
-                    "port": 18087,
+                    "port": 18090,
                     "host": "127.0.0.1"
                 },
                 "target": "{that iodServer}.options.port"
+            },
+            "adminSite": {
+                "record": {
+                    "port": 18091,
+                    "host": "127.0.0.1"
+                },
+                "target": "{that adminSite}.options.port"
             }
         }
     },
